<?xml version="1.0"?>
<package format="2">
  <name>JuniorTutorial</name>
  <version>0.0.0</version>
  <description>Submission for the MUR Driverless Junior Tutorial</description>

  <maintainer email="callberry@student.unimelb.edu.au">Cas Kent</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
